--- a/GE.WebUI/less/material.less
+++ b/GE.WebUI/less/material.less
@@ -102,6 +102,8 @@
     padding: 0;
     margin: 0;
     width: auto;
+    display:inline-block;
+    width:100%;
 
     @media (max-width: @screen-xs-max) {
         float: left;
@@ -120,6 +122,12 @@
     @media (min-width: @screen-lg-min) {
         margin-top: 7px;
     }
+}
+
+.mat-details-info{
+    margin-top:@def-pad*2;
+    display:inline-block;
+    width:100%;
 }
 
 .mat-fwd {
