--- a/GE.WebUI/Views/Games/DisplayTemplates/VMGameMenuImgGame.cshtml
+++ b/GE.WebUI/Views/Games/DisplayTemplates/VMGameMenuImgGame.cshtml
@@ -8,13 +8,14 @@
     <figure>
         <img alt="@Model.Title - новости" @(string.Format("{0}={1}", loadImg?"src":"data-src", Model.GoodPictureUrl+"?width="+Model.ImgWidth)) />
     </figure>
-    @Html.Partial("_LastMaterials", materials.Where(x=>x.ModelCoreType==(byte)SX.WebCore.Enums.ModelCoreType.News).ToArray())
+
+    @Html.Partial("_LastMaterials", materials.Where(x=>x.ModelCoreType==(byte)SX.WebCore.Enums.ModelCoreType.News).ToArray(), new ViewDataDictionary { { "Caption", "Новости" } })
 </div>
 <div class="game-bad-img">
     <figure>
         <img alt="@Model.Title - статьи" @(string.Format("{0}={1}", loadImg ? "src" : "data-src", Model.BadPictureUrl+"?width="+Model.ImgWidth)) />
     </figure>
-    @Html.Partial("_LastMaterials", materials.Where(x => x.ModelCoreType == (byte)SX.WebCore.Enums.ModelCoreType.Article).ToArray())
+    @Html.Partial("_LastMaterials", materials.Where(x => x.ModelCoreType == (byte)SX.WebCore.Enums.ModelCoreType.Article).ToArray(), new ViewDataDictionary { { "Caption", "Статьи" } })
 </div>
 <div class="game-icon-wrapper">
     <img alt="@Model.Title - иконка" @(string.Format("{0}={1}", loadImg ? "src" : "data-src", Model.IconUrl+"?height="+Model.IconHeight)) />
