--- a/GE.WebUI/Views/Games/_LastMaterials.cshtml
+++ b/GE.WebUI/Views/Games/_LastMaterials.cshtml
@@ -1,10 +1,12 @@
 ﻿@model VMGameMenuImgGameMaterial[]
 @{
     VMGameMenuImgGameMaterial item = null;
+    var caption = ViewData["Caption"];
 }
 @if (Model.Any())
 {
     <div class="glm">
+        <h4 class="glm__header">@caption</h4>
         <ul>
             @for (int i = 0; i < Model.Length; i++)
             {
