--- a/GE.WebUI/less/game-list.less
+++ b/GE.WebUI/less/game-list.less
@@ -296,6 +296,12 @@
     }
 }
 
+.glm__header{
+    font-size:17px;
+    margin-bottom:@def-pad;
+    font-weight:700;
+}
+
 .glm > ul {
     list-style: none;
     padding: 0;
