--- a/GE.WebUI/Views/YoutubeVideos/Details.cshtml
+++ b/GE.WebUI/Views/YoutubeVideos/Details.cshtml
@@ -18,7 +18,7 @@
 
             <div class="col-md-8">
                 <iframe id="ytplayer" type="text/html"
-                        src=@($"http://www.youtube.com/embed/{Model.Id}")
+                        src=@($"http://www.youtube.com/embed/{Model.Id}?autoplay=1")
                         frameborder="0"></iframe>
 
             </div>
