--- a/GE.WebUI/less/page-infographic.less
+++ b/GE.WebUI/less/page-infographic.less
@@ -5,3 +5,16 @@
     color: @color-white;
     margin-top:@def-pad*2;
 }
+
+.infographic-img{
+    text-align:center;
+    margin-bottom:@def-pad*2;
+}
+
+.infographic-img > img{
+    max-width:100%;
+}
+
+.infographic-share{
+    text-align:center;
+}
