--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -48,7 +48,7 @@
         @{Html.RenderAction("Random", "Aphorism"); }
     </div>
 
-    @Html.Action("SimilarMaterials", "Articles", new { MaterialId = Model.Id, ModelCoreType = Model.ModelCoreType, amount = 9 })
+    @Html.Action("RelatedMaterials", "Articles", new { MaterialId = Model.Id, ModelCoreType = Model.ModelCoreType })
 
     @{
         banner = banners != null ? banners.SingleOrDefault(x => x.Place == SX.WebCore.DbModels.SxBanner.BannerPlace.Intermediate) : null;
