--- a/GE.WebUI/less/game-list.less
+++ b/GE.WebUI/less/game-list.less
@@ -267,7 +267,7 @@
 
 .glm {
     position: absolute;
-    bottom: 0;
+    bottom: 1px;
     left: 20px;
     width: 60%;
     z-index: 1;
@@ -275,7 +275,6 @@
     border: 1px solid #5F5A5A;
     box-shadow: -4px -4px 4px rgba(0,0,0,0.1);
     padding: 10px;
-    border-bottom: none;
     border-radius: 3px 3px 0 0;
     max-height: 100%;
     color: @color-white;
