https://github.com/EugeneKormin/Game-exe/issues/279

--- a/GE.WebUI/Views/Articles/Details.cshtml
+++ b/GE.WebUI/Views/Articles/Details.cshtml
@@ -43,6 +43,11 @@
         @Html.Partial("_MaterialInfo", Model)
     </div>
 
+    @*subscribe*@
+    <div id="subscribe-block">
+        @Html.Action("Subscribe", "Subscribers")
+    </div>
+
     @*aphorisms*@
     <div id="rnd-aphorisms">
         @{Html.RenderAction("Random", "Aphorism"); }
