--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -56,16 +56,19 @@
     <div class="wrapper">
 
         @Html.Action("GameList", "Games")
+
+        @if (controllerName != "account")
+        {
         <div class="container">
             @Html.Action("Featured", "MaterialCategories", new { amount = 4 })
         </div>
+        }
 
         <div class="container">
 
             @if (ViewBag.H1 != null)
             {
                 <h1 @(ViewBag.H1CssClass != null ? "class=" + ViewBag.H1CssClass : "class=header")>@ViewBag.H1</h1>
-                <br />
             }
 
             @{
