--- a/GE.WebUI/less/featured-mc.less
+++ b/GE.WebUI/less/featured-mc.less
@@ -4,6 +4,7 @@
 
 .featured-mc{
     margin-top:@def-pad;
+    margin-bottom:@def-pad*2;
     color:@color-white;
     font-size:0;
     margin-left:-@def-pad;
