--- a/GE.WebUI/less/pop-mat.less
+++ b/GE.WebUI/less/pop-mat.less
@@ -5,8 +5,8 @@
 
 .pop-mat{
     font-size:13px;
-    margin:@def-pad*2 0;
     color:@color-white;
+    margin-bottom:@def-pad*2;
 }
 
 .pop-mat__header{
