--- a/GE.WebUI/less/for-gamers-block.less
+++ b/GE.WebUI/less/for-gamers-block.less
@@ -190,6 +190,36 @@ f-g-b .games > li > a:hover {
     }
 }
 
+.pv-article .pv-article__image{
+    margin-bottom:10px;
+    position:relative;
+    background-position:center center;
+    background-size:cover;
+    @media (max-width: @screen-xs-max) {
+        height:210px;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+        height:210px;
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+        height:170px;
+    }
+
+    @media (min-width: @screen-lg-min) {
+        height:190px;
+    }
+}
+
+.pv-article .pv-article__image > a{
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+}
+
 .pv-article a {
     color: inherit;
 }
