--- a/GE.WebUI/less/material.less
+++ b/GE.WebUI/less/material.less
@@ -26,6 +26,7 @@
     font-size: 15px;
     line-height: 2;
     text-align:justify;
+    margin-bottom:@def-pad*2;
     @media (max-width: @screen-xs-max) {
         font-size:16px;
         line-height:1.5;
